# ENSC351-Assignment3

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  beatbox.c
as3-server/: server.js
beatbox-server/: package-lock.json  package.json  server.js
beatbox-server/public/: app.js  index.html
lib_beatbox/: CMakeLists.txt  accelerometer.c  accelerometer.h  audioMixer.c  audioMixer.h  beatGenerator.c  beatGenerator.h  inputMan.c  inputMan.h  intervalTimer.c  intervalTimer.h  joystick.c  joystick.h  mpc3208.c  mpc3208.h  rotary.c  rotary.h  udpServer.c  udpServer.h
libbeatbox/: CMakeLists.txt  audioMixer.c  audioMixer.h  beatGenerator.c  beatGenerator.h  udpServer.c  udpServer.h
libcontrols/: CMakeLists.txt  accelerometer.h  joystick.c  rotary.h
